# awesome-compiler

./: .gitignore  CMakeLists.txt  Makefile  flake.nix  makefile  memexec.c
include/: hashtable.c  hashtable.h  lexer.h  linked_list.c  linked_list.h
parsers/: simple1.c  simple2.c
parsers/simple2/: json.c  main.c  main.h  token.c  token.h
samples/: 1.json
src/: lexer.c  main.c  main.cxx  memexec.c
